--- a/Project.ipynb
+++ b/Project.ipynb
@@ -59,17 +59,17 @@
    "source": [
     "### Decompositions\n",
     "\n",
-    "*Note: Because the scope of this project is to create a greater understanding of the root of potential pay gaps, this walkthrough will be in the context of that. Our outcome of interest will be wages $w$. The two groups we will be comparing will be males $m$ and females $f$.*\n",
+    "*Note: Because the scope of this project is to create a greater understanding of the root of potential pay gaps, this walkthrough will be in the context of that. Our outcome of interest will be wages $w$. The two groups we will be comparing are males $m$ and females $f$.*\n",
     "\n",
-    "In this section we'll break down the calculation of the decomposition. The wage gap in wages is the difference in the average wage for males and the average wage for females.\n",
+    "In this section we'll break down the calculation of the decomposition. The gap in wages is the difference between the average wage for males and the average wage for females.\n",
     "\n",
     "$$Gap = E[Wage_m] - E[Wage_f]$$\n",
     "\n",
-    "We will substitute those expectations with a linear model for each group using the following form, where $X$ are the attributes that go into determining an individual's wage, and $\\epsilon$ is an error term:\n",
+    "We substitute $Wage$ for each group with a linear model of the following form, where $X$ are the attributes that determine an individual's wage, and $\\epsilon$ is an error term:\n",
     "\n",
     "$$Wage= X'\\beta + \\epsilon$$\n",
     "\n",
-    "where $\\bar\\epsilon=0$. After plugging the linear models for each gender into the $Gap$ equation, and using the assumption that the expectation of the errors is zero and making the assumption that $E[\\beta]=\\beta$, we are left with\n",
+    "with $\\bar\\epsilon=0$. After plugging the linear models for each gender into the $Gap$ equation, and using the assumptions that the expectation of the errors is zero and $E[\\beta]=\\beta$, we are left with\n",
     "\n",
     "$$Gap = E[X_m]'\\beta_m - E[X_f]'\\beta_f$$\n",
     "\n",
@@ -88,7 +88,7 @@
     "$$+E[X_f]'(\\beta_m-\\beta_f) \\quad \\quad \\quad (2)$$\n",
     "$$+(E[X_m]-E[X_f])'(\\beta_m-\\beta_f) \\quad \\quad (3)$$\n",
     "\n",
-    "Each of those represents a source of the difference, we'll call them the Endowment (1), Coefficient (2), and Interaction (3) terms.\n",
+    "Each of these represents a source of the difference, we'll call them the Endowment (1), Coefficient (2), and Interaction (3) terms.\n",
     "\n",
     "(1) The first term is the portion of the gap that comes from different **endowments**, that is, the difference in attributes between males and females. So a difference in educational attainment would be captured here.\n",
     "\n",
@@ -101,11 +101,11 @@
     "-------\n",
     "*It is important to note that this decomposition uses the female regression as its baseline. In (1), we use the female regression coefficients to calculate the different endowment effect, and in (2), we use the female values of $E[X]$ to calculate the impact of different coefficients. This can easily be done using a male regression baseline by switching the order of the terms.*\n",
     "\n",
-    "If we want to see the contributions to each of (1), (2), and (3) from individual variables (each row in $X$), we are able to use the fact that the each is a summation of the contribution of each subfactor. Using the Endowment term as an example, for each of the $m$ variables:\n",
+    "If we want to see the contributions to each of (1), (2), and (3) from individual variables (each row in $X$), we are able to use the fact that each is a summation of the contributions from each subfactor. Using the Endowment term as an example, for each of the $m$ variables:\n",
     "\n",
     "$$(E[X_m]-E[X_f])'\\beta_f = \\sum_{i=1}^{m}(E[X_{mi}]-E[X_{fi}])'\\beta_{fi}$$\n",
     "\n",
-    "We would just pull out a term of the summation for variable analysis.\n",
+    "We can pull out a term of the summation for variable analysis.\n",
     "\n",
     "------"
    ]
@@ -120,7 +120,7 @@
     "\n",
     "$$Gap = E + U$$\n",
     "\n",
-    "This decomposition makes the assumption that there is a set of true regression coefficients, $\\beta^*.$ There are many ways to calculate the true regression line, but it is highly contextual. If it is thought that there is discrimination that is negative to one group, and not positive toward the other, $\\beta^*$ may just be the coefficients of the undiscriminated group. If one group benefits and the other is hurt by discrimination, $\\beta^*$ is often calculated from a pooled regression between the two groups. We will be using a pooled regression as our $\\beta^*$, though there are many ways to calculate it.\n",
+    "This decomposition makes the assumption that there is a set of true regression coefficients, $\\beta^*.$ There are many ways to calculate the true regression line, but it is highly contextual. If it is thought that there exists discrimination that is negative towards one group, and not positive towards the other, $\\beta^*$ may just be the coefficients of the undiscriminated group. If one group benefits and the other is hurt by discrimination, $\\beta^*$ is often calculated from a pooled regression between the two groups. We will be using a pooled regression as our $\\beta^*$, though there are many other ways to calculate it.\n",
     "\n",
     "The **explained** portion $E$ is called the \"quantity effect\", and is similar to the **endowments** term from the three-fold decomposition.\n",
     "\n",
@@ -132,9 +132,9 @@
     "\n",
     "This **unexplained** portion is normally attributed to discrimination, but as stated in the Jann paper, \"this interpretation hinges on the assumption that there are no relevant unobserved predictors.\"(4) If we have low explanatory power in our regression equations, there is potential for most of the noise to be captured in this term.\n",
     "\n",
-    "Even though discrimination is normally attributed to the coefficients, sometimes there is discrimination that presents itself in the endowment terms. For example, if a female is less likely to be admitted to school based on discrimination, then they will have lower education values that not naturally inherent to them.\n",
+    "Even though discrimination is normally attributed to the coefficients, sometimes there is discrimination that presents itself in the endowment terms. For example, if females are less likely to be admitted to school because of discrimination, then they will have lower education values not naturally inherent to them.\n",
     "\n",
-    "*Note: we will include an indicator for gender in our pooled model (that is what Stata does in their implementation).*"
+    "*Note: we will include an indicator for gender in our pooled model (this is what Stata does in their implementation).*"
    ]
   },
   {
@@ -143,9 +143,9 @@
    "source": [
     "#### Summary:\n",
     "\n",
-    "Three-fold: Difference in endowments, difference in returns to those endowments, interaction between those endowments and the rate of return. Uses one of the groups as a baseline. Discrimination is measured from differences in returns and (sometimes) from the interaction term.\n",
+    "Three-fold: difference in endowments, difference in returns to those endowments, and interaction between those endowments and the rate of return. Uses one of the groups as a baseline. Discrimination is measured from differences in returns and (sometimes) from the interaction term.\n",
     "\n",
-    "Two-fold: difference in endowments, difference in returns from endowments. We use a pooled baseline. Discrimination is measured from the unexplained term (the difference in returns from endowments)."
+    "Two-fold: difference in endowments and difference in returns from endowments. We use a pooled baseline. Discrimination is measured from the unexplained term (the difference in returns from endowments)."
    ]
   },
   {
@@ -167,7 +167,9 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -415,7 +417,9 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -454,7 +458,9 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -482,7 +488,9 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -510,7 +518,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -538,7 +548,9 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -624,6 +636,7 @@
    "cell_type": "code",
    "execution_count": 100,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -653,7 +666,9 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -688,7 +703,9 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -745,7 +762,9 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -799,7 +818,9 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -968,7 +989,9 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1133,6 +1156,7 @@
    "cell_type": "code",
    "execution_count": 75,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1211,6 +1235,7 @@
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -1339,7 +1364,9 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1702,7 +1729,9 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -2066,6 +2095,7 @@
    "cell_type": "code",
    "execution_count": 105,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -2879,6 +2909,7 @@
    "cell_type": "code",
    "execution_count": 103,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -3701,7 +3732,9 @@
   {
    "cell_type": "code",
    "execution_count": 111,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3736,7 +3769,9 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3771,7 +3806,9 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3807,6 +3844,7 @@
    "cell_type": "code",
    "execution_count": 139,
    "metadata": {
+    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -3841,7 +3879,9 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -3941,9 +3981,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
